infrastructure/security/gatekeeper/constraints/disallow-latest-tag.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sDisallowLatest

metadata:
  name: disallow-latest-image

spec:
  enforcementAction: deny
