infrastructure/security/gatekeeper/constraints/required-security-context.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredSecurityContext

metadata:
  name: require-run-as-non-root

spec:
  enforcementAction: deny
